IPP/projects/IPP-test.php-master/parse-only/vyzi_tests/should-fail/wrong_arg_count3.src
.IPPcode19
MOVE GF@a GF@x GF@ou
